--- a/example/plantgl2k3d.ipynb
+++ b/example/plantgl2k3d.ipynb
@@ -2,33 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07bcb69439cf4f20ae1d268738a2d429",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "UGxvdChhbnRpYWxpYXM9MywgYXhlcz1bJ3gnLCAneScsICd6J10sIGJhY2tncm91bmRfY29sb3I9MTY3NzcyMTUsIGNhbWVyYT1bNC41LCA0LjUsIDQuNSwgMC4wLCAwLjAsIDAuMCwgMS4wLCDigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import k3d\n",
-    "plot = k3d.plot()\n",
-    "plot"
+    "plot = k3d.plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,46 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tomesh(geometry, d=None):\n",
-    "    if d is None:\n",
-    "        d = Tesselator()\n",
-    "        \n",
-    "    geometry.apply(d)\n",
-    "    idl = [tuple(index) for index in list(d.discretization.indexList)]\n",
-    "    pts = [(pt.x, pt.y, pt.z) for pt in list(d.discretization.pointList)]\n",
-    "    mesh = k3d.mesh(vertices=pts, indices=idl)\n",
-    "    return mesh\n",
-    "    \n",
-    "def pgl(pglobject):\n",
-    "    plot = k3d.plot(camera_auto_fit=False)\n",
-    "    d = Discretizer()\n",
-    "    \n",
-    "    if isinstance(pglobject, Geometry):\n",
-    "        mesh = tomesh(pglobject)\n",
-    "        plot += mesh\n",
-    "    elif isinstance(pglobject, Shape):\n",
-    "        mesh = tomesh(pglobject.geometry)\n",
-    "        plot += mesh\n",
-    "    elif isinstance(pglobject, Scene):\n",
-    "        for sh in pglobject:\n",
-    "            mesh = tomesh(sh.geometry)\n",
-    "            plot+= mesh\n",
-    "    return plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcd61ff153904dd8b3c2950a7b04ce55",
+       "model_id": "7e04894d54364b02a78ba8eb0688d661",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,12 +43,14 @@
     }
    ],
    "source": [
-    "pgl(s)"
+    "import oawidgets\n",
+    "from oawidgets.plantgl import PlantGL\n",
+    "PlantGL(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0b4aecf8c9e4aec84ff6373596d0a37",
+       "model_id": "f1e03a675f064f6484152c8634fe5368",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,16 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOT using graph editor observer No module named grapheditor\n"
+     ]
+    }
+   ],
    "source": [
     "import openalea.mtg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,22 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene =pf.plot(gc=True, display=False)"
+    "scene = pf.plot(gc=True, display=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50b496fe25b94369a34e876d4d58f4a6",
+       "model_id": "a368a7d0b1ff41ed90b9a19a9d5671bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IPython (Python 2)",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -249,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
