--- a/doc/notebook/sphere.ipynb
+++ b/doc/notebook/sphere.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import k3d\n",
-    "plot = k3d.plot()"
+    "plot=k3d.plot()"
    ]
   },
   {
@@ -35,7 +35,6 @@
    },
    "outputs": [],
    "source": [
-    "import oawidgets\n",
     "from oawidgets.plantgl import PlantGL\n",
     "PlantGL(s)"
    ]
@@ -142,6 +141,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -149,6 +149,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -159,6 +160,7 @@
        "flat_shading": true,
        "id": 140499393180496,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          12,
@@ -166,6 +168,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -176,6 +179,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          8,
@@ -238,6 +242,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -245,6 +250,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -255,6 +261,7 @@
        "flat_shading": true,
        "id": 139656766553424,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          112,
@@ -262,6 +269,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -272,6 +280,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          58,
@@ -391,6 +400,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -398,6 +408,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -408,6 +419,7 @@
        "flat_shading": true,
        "id": 140499393182928,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          112,
@@ -415,6 +427,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -425,6 +438,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          58,
@@ -505,6 +519,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -512,6 +527,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -522,6 +538,7 @@
        "flat_shading": true,
        "id": 140499393214480,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          112,
@@ -529,6 +546,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -539,6 +557,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          58,
@@ -601,6 +620,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -608,6 +628,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -618,6 +639,7 @@
        "flat_shading": true,
        "id": 139656766572944,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          12,
@@ -625,6 +647,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -635,6 +658,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          8,
@@ -822,6 +846,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -829,6 +854,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -839,6 +865,7 @@
        "flat_shading": true,
        "id": 139657573303120,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          112,
@@ -846,6 +873,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -856,6 +884,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          58,
@@ -1088,6 +1117,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -1095,6 +1125,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -1105,6 +1136,7 @@
        "flat_shading": true,
        "id": 139656766571600,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          112,
@@ -1112,6 +1144,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -1122,6 +1155,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          58,
