Add notebook with full state saved

--- a/doc/notebook/lorenz_attractor.ipynb
+++ b/doc/notebook/lorenz_attractor.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc9581f1fba842c08069e24a5d6aa635",
+       "model_id": "6f88c130f8594495950e7d9da9a67ac0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,26 +92,111 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "IPython (Python 2)",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "1595c51869e148cb9b7d87464bc13d6a": {
+     "4eabac4e97584735b6e7e05aa86f3f18": {
+      "model_module": "k3d",
+      "model_module_version": "2.6.9",
+      "model_name": "PlotModel",
+      "state": {
+       "_backend_version": "2.6.9",
+       "_dom_classes": [],
+       "_view_count": null,
+       "antialias": 3,
+       "axes": [
+        "x",
+        "y",
+        "z"
+       ],
+       "background_color": 16777215,
+       "camera": [
+        55.66713371933337,
+        -79.07498227150468,
+        32.71139529055575,
+        1.3520069122314453,
+        2.397707939147949,
+        27.279882609844208,
+        0,
+        0,
+        1
+       ],
+       "camera_auto_fit": true,
+       "camera_no_pan": false,
+       "camera_no_rotate": false,
+       "camera_no_zoom": false,
+       "clipping_planes": [],
+       "colorbar_object_id": -1,
+       "fps_meter": false,
+       "grid": [
+        -1,
+        -1,
+        -1,
+        1,
+        1,
+        1
+       ],
+       "grid_auto_fit": true,
+       "grid_visible": true,
+       "height": 512,
+       "layout": "IPY_MODEL_ee2b8fe60ba54944b1b53f9a6f059085",
+       "lighting": 1,
+       "menu_visibility": true,
+       "object_ids": [
+        4381347728
+       ],
+       "rendering_steps": 1,
+       "screenshot": "",
+       "screenshot_scale": 2,
+       "time": 0,
+       "voxel_paint_color": 0
+      }
+     },
+     "6f88c130f8594495950e7d9da9a67ac0": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
+      "state": {
+       "layout": "IPY_MODEL_c2ffe91cb4e14e2897cfeefd9f88f5f4",
+       "outputs": [
+        {
+         "data": {
+          "application/vnd.jupyter.widget-view+json": {
+           "model_id": "4eabac4e97584735b6e7e05aa86f3f18",
+           "version_major": 2,
+           "version_minor": 0
+          },
+          "text/plain": "UGxvdChhbnRpYWxpYXM9MywgYXhlcz1bJ3gnLCAneScsICd6J10sIGJhY2tncm91bmRfY29sb3I9MTY3NzcyMTUsIGNhbWVyYT1bNC41LCA0LjUsIDQuNSwgMC4wLCAwLjAsIDAuMCwgMS4wLCDigKY=\n"
+         },
+         "metadata": {},
+         "output_type": "display_data"
+        }
+       ]
+      }
+     },
+     "c2ffe91cb4e14e2897cfeefd9f88f5f4": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.1.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "d12c876f0d6844c08a9a4a4eb0114de8": {
       "buffers": [
        {
         "data": "eNoDAAAAAAE=",
@@ -125,7 +210,7 @@
         "data": "eNoDAAAAAAE=",
         "encoding": "base64",
         "path": [
-         "color_map",
+         "colors",
          "compressed_buffer"
         ]
        },
@@ -133,7 +218,7 @@
         "data": "eNoDAAAAAAE=",
         "encoding": "base64",
         "path": [
-         "colors",
+         "color_map",
          "compressed_buffer"
         ]
        },
@@ -155,7 +240,7 @@
        }
       ],
       "model_module": "k3d",
-      "model_module_version": "2.6.8",
+      "model_module_version": "2.6.9",
       "model_name": "ObjectModel",
       "state": {
        "_view_count": null,
@@ -183,7 +268,7 @@
         ]
        },
        "compression_level": 0,
-       "id": 2136475506896,
+       "id": 4381347728,
        "model_matrix": {
         "dtype": "float32",
         "shape": [
@@ -206,96 +291,11 @@
        "width": 0.01
       }
      },
-     "5023fe702a434051988ad2af141f06de": {
+     "ee2b8fe60ba54944b1b53f9a6f059085": {
       "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.0.0",
+      "model_module_version": "1.1.0",
       "model_name": "LayoutModel",
       "state": {}
-     },
-     "aba489637a3e40dda1fca6b8a650b030": {
-      "model_module": "k3d",
-      "model_module_version": "2.6.8",
-      "model_name": "PlotModel",
-      "state": {
-       "_backend_version": "2.6.8",
-       "_dom_classes": [],
-       "_view_count": null,
-       "antialias": 3,
-       "axes": [
-        "x",
-        "y",
-        "z"
-       ],
-       "background_color": 16777215,
-       "camera": [
-        71.89540204839352,
-        -103.41738476509516,
-        34.33422212346048,
-        1.3520069122314453,
-        2.397707939147949,
-        27.279882609844208,
-        0,
-        0,
-        1
-       ],
-       "camera_auto_fit": true,
-       "camera_no_pan": false,
-       "camera_no_rotate": false,
-       "camera_no_zoom": false,
-       "clipping_planes": [],
-       "colorbar_object_id": -1,
-       "fps_meter": false,
-       "grid": [
-        -1,
-        -1,
-        -1,
-        1,
-        1,
-        1
-       ],
-       "grid_auto_fit": true,
-       "grid_visible": true,
-       "height": 512,
-       "layout": "IPY_MODEL_bdceb7de8a574c04a3b7014857860ec8",
-       "lighting": 1,
-       "menu_visibility": true,
-       "object_ids": [
-        2136475506896
-       ],
-       "rendering_steps": 1,
-       "screenshot": "",
-       "screenshot_scale": 4,
-       "time": 0,
-       "voxel_paint_color": 0
-      }
-     },
-     "bdceb7de8a574c04a3b7014857860ec8": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "fc9581f1fba842c08069e24a5d6aa635": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_5023fe702a434051988ad2af141f06de",
-       "outputs": [
-        {
-         "data": {
-          "application/vnd.jupyter.widget-view+json": {
-           "model_id": "aba489637a3e40dda1fca6b8a650b030",
-           "version_major": 2,
-           "version_minor": 0
-          },
-          "text/plain": "Plot(antialias=3, axes=['x', 'y', 'z'], background_color=16777215, camera=[4.5, 4.5, 4.5, 0.0, 0.0, 0.0, 1.0, …"
-         },
-         "metadata": {},
-         "output_type": "display_data"
-        }
-       ]
-      }
      }
     },
     "version_major": 2,
