Update sphere tutorial

--- a/example/sphere.ipynb
+++ b/example/sphere.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0b04c30bdbd4466be353d2b046e4d19",
+       "model_id": "895ecb8e3e16448e81c0a07fcb9d5ace",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,7 @@
    ],
    "source": [
     "import oawidgets\n",
-    "from oawidgets.plantgl import PlantGL\n",
+    "from oawidgets.plantgl import PlantGL, PlantGLscene\n",
     "PlantGL(s)"
    ]
   },
@@ -64,7 +64,8 @@
     "scene = Scene()\n",
     "scene.add(Sphere())\n",
     "b = Box()\n",
-    "tbox = Translated((1,0,0), b)\n",
+    "tbox = Shape(Translated((1,0,0), b))\n",
+    "tbox.appearance.ambient=Color3(30,70,12)\n",
     "scene.add(tbox)"
    ]
   },
@@ -74,9 +75,28 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.11764706 0.2745098  0.04705882]]\n",
+      "('len vertices', 66)\n",
+      "('len attributes', 66)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mesh=PlantGLscene(scene)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e376d2ba00a34dafb3f205b9a64f6c4c",
+       "model_id": "06ec6e442f2749fd8db4819cdc4e0748",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +109,16 @@
     }
    ],
    "source": [
-    "PlantGL(scene)"
+    "mesh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k3d.mesh??\n"
    ]
   },
   {
@@ -102,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "IPython (Python 2)",
    "language": "python",
    "name": "python2"
   },
@@ -116,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.15"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
